authul_macros/tests/errors/table/attr_name_wrong_type.rs
#[authul_macros::authul_table(42)]
struct Foo;

#[authul_macros::authul_table("name")]
struct Bar;

fn main() {
}
